update 3.0 doc nav

--- a/mkdocs_en.yml
+++ b/mkdocs_en.yml
@@ -153,9 +153,18 @@ nav:
         - "Governance": 'docs/2.7/admin/serviceGovernance.md'
         - "Testing": 'docs/2.7/admin/serviceTest.md'
     - "3.0":
-        - "User's Guide":
-            - "Preface":
-                - "Bakcground": 'docs/3.0/user/preface/background.md'
+        - "Background": 'docs/3.0/user/background.md'
+        - "Concepts & Architecture":
+            - "Why Dubbo 3.0": 'docs/3.0/user/preface/background.md'
+            - "Service Discovery": 'docs/3.0/user/preface/background.md'
+            - "Traffic Management": 'docs/3.0/user/preface/background.md'
+            - "Interface Based": 'docs/3.0/user/preface/background.md'
+            - "Protocol over HTTP/2": 'docs/3.0/user/preface/background.md'
+            - "Cloud Native": 'docs/3.0/user/preface/background.md'
+            - "Easy to Use": 'docs/3.0/user/preface/background.md'
+        - "Get Started":
+        - "Examples/Tasks":
+        - "Reference":
   - "Blog":
       - "Your First Dubbo Demo": 'blog/dubbo-101.md'
       - "Dubbo Admin service test": 'blog/service-test.md'
