--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -167,18 +167,9 @@ nav:
         - "服务治理": 'admin/serviceGovernance.md'
         - "服务测试": 'admin/serviceTest.md'
     - "3.0":
-        - "Background": 'docs/3.0/user/background.md'
-        - "Concepts & Architecture":
-            - "Why Dubbo 3.0": 'docs/3.0/user/preface/background.md'
-            - "Service Discovery": 'docs/3.0/user/preface/background.md'
-            - "Traffic Management": 'docs/3.0/user/preface/background.md'
-            - "Interface Based": 'docs/3.0/user/preface/background.md'
-            - "Protocol over HTTP/2": 'docs/3.0/user/preface/background.md'
-            - "Cloud Native": 'docs/3.0/user/preface/background.md'
-            - "Easy to Use": 'docs/3.0/user/preface/background.md'
-        - "Get Started":
-        - "Examples/Tasks":
-        - "Reference":
+        - "User's Guide":
+            - "Preface":
+                - "Bakcground": 'docs/3.0/user/preface/background.md'
   - "Blog":
       - "2019-2020": 'blog/apache-dubbo-2019-2020.md'
       - "服务测试": 'blog/service-test.md'
@@ -246,7 +237,7 @@ theme:
   font: false
   favicon: assets/favicon.png
   icon:
-    logo: logo
+    logo: dubbo
 
 # Plugins
 plugins:
