update navs and doc links

--- a/mkdocs_en.yml
+++ b/mkdocs_en.yml
@@ -22,9 +22,11 @@ nav:
         - "Maturity": 'docs/2.7/user/maturity.md'
         - "Configuration":
             - "XML Configuration": 'docs/2.7/user/configuration/xml.md'
+            - "Annotation Configuration": 'docs/2.7/user/configuration/properties.md'
             - "API Configuration": 'docs/2.7/user/configuration/api.md'
             - "Annotation Configuration": 'docs/2.7/user/configuration/annotation.md'
-        - "Demos":
+            - "Configuration Loading Process": 'docs/2.7/user/configuration/configuration-loading-process.md'
+      - "Demos":
             - "Check on start": 'docs/2.7/user/demos/preflight-check.md'
             - "Fault tolerance": 'docs/2.7/user/demos/fault-tolerent-strategy.md'
             - "Load balance": 'docs/2.7/user/demos/loadbalance.md'
@@ -177,7 +179,7 @@ nav:
       - "How to contribute": 'developers/guide_dev.md'
       - "Developers": 'developers/developers_dev.md'
       - "User Guide":
-        - "faq": 'developers/user-guide/faq_dev.md'
+          - "faq": 'developers/user-guide/faq_dev.md'
       - "Contributor Guide":
           - "New contributor guide": 'developers/contributor-guide/new-contributor-guide_dev.md'
           - "Software donation guide": 'developers/contributor-guide/software-donation-guide_dev.md'
@@ -189,7 +191,7 @@ nav:
           - "How to report security issues": 'developers/reporting-security-issues_dev.md'
       - "Committer Guide":
           - "New Committer guide": 'developers/committer-guide/new-committer-guide_dev.md'
-          - "Label an Issue": 'developers/Label an Issue.md'
+          - "Label an Issue": 'developers/committer-guide/label-an-issue-guide_dev.md'
           - "Website Guide": 'developers/committer-guide/website-guide_dev.md'
           - "Apache Dubbo Page Maintenance": 'developers/committer-guide/apache-dubbo-page_dev.md'
           - "Release Guide": 'developers/committer-guide/release-guide_dev.md'
