--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -190,6 +190,8 @@ nav:
       - "Sentinel: The flow sentinel of Dubbo service": 'blog/sentinel-introduction-for-dubbo.md'
       - "Tracking with Pinpoint": 'blog/pinpoint.md'
   - "开发者指引":
+      - "如何做出贡献": 'developers/guide_dev.md'
+      - "开发者": 'developers/developers_dev.md'
       - "使用指南":
           - "faq": 'developers/user-guide/faq_dev.md'
       - "贡献者指南":
@@ -203,12 +205,10 @@ nav:
           - "How to report security issues": 'developers/reporting-security-issues_dev.md'
       - "提交者指南":
           - "New Committer guide": 'developers/committer-guide/new-committer-guide_dev.md'
-          - "Label an Issue": 'developers/Label an Issue.md'
+          - "Label an Issue": 'developers/committer-guide/label-an-issue-guide_dev.md'
           - "Website Guide": 'developers/committer-guide/website-guide_dev.md'
           - "Apache Dubbo Page Maintenance": 'developers/committer-guide/apache-dubbo-page_dev.md'
           - "Release Guide": 'developers/committer-guide/release-guide_dev.md'
-      - "如何做出贡献": 'developers/guide_dev.md'
-      - "开发者": 'developers/developers_dev.md'
   - "下载":
       - "版本列表": "blog/download.md"
 # Configuration
