add google analytics

--- a/mkdocs_en.yml
+++ b/mkdocs_en.yml
@@ -281,3 +281,6 @@ markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
+google_analytics:
+  - UA-112489517-1
+  - auto
