--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -24,7 +24,7 @@ jobs:
           mkdocs build -f mkdocs_en.yml -d ./output/en-us && mkdocs build -f mkdocs_zh.yml -d ./output/zh-cn
           mkdir deploy-dist && cp -R img ./output/zh-cn/ && cp -R img ./output/en-us/ && cp -R ./output/* deploy-dist/
           cp -R schema deploy-dist/
-      - name: Archive code coverage results
+      - name: Archive
         uses: actions/upload-artifact@v2
         with:
           name: website
