--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
           mkdocs --version
           echo "removing previous static files from ./output" && rm -rf ./output
           mkdocs build -f mkdocs_en.yml -d ./output/en-us && mkdocs build -f mkdocs_zh.yml -d ./output/zh-cn
-          mkdir deploy-dist && cp -R img ./output/zh-cn/ && cp -R img ./output/en-us/ && cp -R ./output/* deploy-dist/
+          mkdir deploy-dist && cp -R img ./output/zh-cn/ && cp -R img ./output/en-us/ && cp -R ./output/* deploy-dist/ && cp *.html deploy-dist/ && cp .htaccess deploy-dist/
           cp -R schema deploy-dist/
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v2.4.0
