--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,7 +1,7 @@
-name: Website deploy
+name: Website build
 
 on:
-  push:
+  pull_request:
     branches:
     - master
 
@@ -22,13 +22,10 @@ jobs:
           mkdocs --version
           echo "removing previous static files from ./output" && rm -rf ./output
           mkdocs build -f mkdocs_en.yml -d ./output/en-us && mkdocs build -f mkdocs_zh.yml -d ./output/zh-cn
-          mkdir deploy-dist && cp -R img ./output/zh-cn/ && cp -R img ./output/en-us/ && cp -R ./output/* deploy-dist/ && cp *.html deploy-dist/ && cp .htaccess deploy-dist/
+          mkdir deploy-dist && cp -R img ./output/zh-cn/ && cp -R img ./output/en-us/ && cp -R ./output/* deploy-dist/
           cp -R schema deploy-dist/
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v2.4.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_BRANCH: asf-site
-          PUBLISH_DIR: ./deploy-dist
+      - name: Archive
+        uses: actions/upload-artifact@v2
         with:
-          keepFiles: true
+          name: website
+          path: deploy-dist/
