--- a/.htaccess
+++ b/.htaccess
@@ -17,4 +17,12 @@
 
 </IfModule>
 
+<IfModule mod_rewrite.c>
+  # Force Https
+  RewriteEngine On
+  RewriteCond %{HTTP_HOST} ^dubbo\.apache\.org [NC]
+  RewriteCond %{SERVER_PORT} 80
+  RewriteRule ^(.*)$ http://dubbo.apache.org/$1 [R,L]
+</IfModule>
+
 ErrorDocument 404 https://dubbo.apache.org/
