--- a/.htaccess
+++ b/.htaccess
@@ -22,7 +22,7 @@
   RewriteEngine On
   RewriteCond %{HTTP_HOST} ^dubbo\.apache\.org [NC]
   RewriteCond %{SERVER_PORT} 80
-  RewriteRule ^(.*)$ http://dubbo.apache.org/$1 [R,L]
+  RewriteRule ^(.*)$ https://dubbo.apache.org/$1 [R,L]
 </IfModule>
 
 ErrorDocument 404 https://dubbo.apache.org/
