--- a/.htaccess
+++ b/.htaccess
@@ -18,11 +18,16 @@
 </IfModule>
 
 <IfModule mod_rewrite.c>
-  # Force Https
   RewriteEngine On
-  RewriteCond %{HTTP_HOST} ^dubbo\.apache\.org [NC]
-  RewriteCond %{SERVER_PORT} 80
-  RewriteRule ^(.*)$ https://dubbo.apache.org/$1 [R,L]
+
+  RedirectMatch 301 /zh-cn/docs/admin(.*) /zh-cn/docs/2.7/admin/$1
+  RedirectMatch 301 /en-us/docs/admin(.*) /en-us/docs/2.7/admin/$1
+  RedirectMatch 301 /zh-cn/docs/dev(.*) /zh-cn/docs/2.7/dev/$1
+  RedirectMatch 301 /en-us/docs/dev(.*) /en-us/docs/2.7/dev/$1
+  RedirectMatch 301 /zh-cn/docs/user(.*) /zh-cn/docs/2.7/user/$1
+  RedirectMatch 301 /en-us/docs/user(.*) /en-us/docs/2.7/user/$1
+  RedirectMatch 301 /zh-cn/docs/source_code_guide(.*) /zh-cn/docs/2.7/source_code_guide/$1
+  RedirectMatch 301 /en-us/docs/source_code_guide(.*) /en-us/docs/2.7/source_code_guide/$1
 </IfModule>
 
 ErrorDocument 404 https://dubbo.apache.org/
