--- a/.htaccess
+++ b/.htaccess
@@ -17,4 +17,17 @@
 
 </IfModule>
 
+<IfModule mod_rewrite.c>
+  RewriteEngine On
+
+  RedirectMatch 301 /zh-cn/docs/admin/(.*).html /zh-cn/docs/2.7/admin/$1
+  RedirectMatch 301 /en-us/docs/admin/(.*).html /en-us/docs/2.7/admin/$1
+  RedirectMatch 301 /zh-cn/docs/dev/(.*).html /zh-cn/docs/2.7/dev/$1
+  RedirectMatch 301 /en-us/docs/dev/(.*).html /en-us/docs/2.7/dev/$1
+  RedirectMatch 301 /zh-cn/docs/user/(.*).html /zh-cn/docs/2.7/user/$1
+  RedirectMatch 301 /en-us/docs/user/(.*).html /en-us/docs/2.7/user/$1
+  RedirectMatch 301 /zh-cn/docs/source_code_guide/(.*).html /zh-cn/docs/2.7/source_code_guide/$1
+  RedirectMatch 301 /en-us/docs/source_code_guide/(.*).html /en-us/docs/2.7/source_code_guide/$1
+</IfModule>
+
 ErrorDocument 404 https://dubbo.apache.org/
