--- a/.htaccess
+++ b/.htaccess
@@ -28,6 +28,10 @@
   RedirectMatch 301 /en-us/docs/user/(.*).html /en-us/docs/2.7/user/$1
   RedirectMatch 301 /zh-cn/docs/source_code_guide/(.*).html /zh-cn/docs/2.7/source_code_guide/$1
   RedirectMatch 301 /en-us/docs/source_code_guide/(.*).html /en-us/docs/2.7/source_code_guide/$1
+  RedirectMatch 301 /zh-cn/docs/developers/(.*).html /zh-cn/developers/$1
+  RedirectMatch 301 /en-us/docs/developers/(.*).html /en-us/developers/$1
+  RedirectMatch 301 /zh-cn/blog/(.*).html /zh-cn/blog/$1
+  RedirectMatch 301 /en-us/blog/(.*).html /en-us/blog/$1
 </IfModule>
 
 ErrorDocument 404 https://dubbo.apache.org/
