update blog menu

--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -171,11 +171,11 @@ nav:
             - "Preface":
                 - "Bakcground": 'docs/3.0/user/preface/background.md'
   - "Blog":
-      - "2019-2020": 'blog/apache-dubbo-2019-2020.md'
+      - "2019-2020回顾": 'blog/apache-dubbo-2019-2020.md'
       - "服务测试": 'blog/service-test.md'
-      - "Implementation background and practice of Dubbo server asynchronous interface": 'blog/dubboAsync_server.md'
-      - "Implementation background and practice of Dubbo client asynchronous interface": 'blog/dubboAsync_client.md'
-      - "How to use Fescar to ensure consistency between Dubbo Microservices": 'blog/dubbo-fescar.md'
+      - "Dubbo server asynchronous": 'blog/dubboAsync_server.md'
+      - "Dubbo client asynchronous": 'blog/dubboAsync_client.md'
+      - "Fescar to ensure Dubbo Microservices consistency": 'blog/dubbo-fescar.md'
       - "Prepare an Apache Release": 'blog/prepare-an-apache-release.md'
       - "Dubbo protocol": 'blog/dubbo-protocol.md'
       - "Your First Dubbo Demo": 'blog/dubbo-101.md'
