--- a/mkdocs_en.yml
+++ b/mkdocs_en.yml
@@ -159,10 +159,11 @@ nav:
         - "Bakcground": 'docs/3.0/user/preface/background.md'
   - "Blog":
       - "Your First Dubbo Demo": 'blog/dubbo-101.md'
+      - "2019-2020 Review": 'blog/apache-dubbo-2019-2020.md'
       - "Dubbo Admin service test": 'blog/service-test.md'
-      - "Implementation background and practice of Dubbo server asynchronous interface": 'blog/dubboAsync_server.md'
-      - "Implementation background and practice of Dubbo client asynchronous interface": 'blog/dubboAsync_client.md'
-      - "How to use Fescar to ensure consistency between Dubbo Microservices": 'blog/dubbo-fescar.md'
+      - "Dubbo server asynchronous": 'blog/dubboAsync_server.md'
+      - "Dubbo client asynchronous": 'blog/dubboAsync_client.md'
+      - "Fescar to enable Dubbo Microservices consistency": 'blog/dubbo-fescar.md'
       - "Prepare an Apache Release": 'blog/prepare-an-apache-release.md'
       - "Dubbo protocol": 'blog/dubbo-protocol.md'
       - "Your First Dubbo filter": 'blog/first-dubbo-filter.md'
