--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -114,58 +114,58 @@ nav:
           - "版本与升级":
               - "2.7.x升级步骤及注意事项": 'docs/2.7/user/versions/version-270.md'
       - "开发手册":
-          - "源码构建": 'dev/build.md'
-          - "框架设计": 'dev/design.md'
-          - "扩展点加载": 'dev/SPI.md'
-          - "实现细节": 'dev/implementation.md'
+          - "源码构建": 'docs/2.7/dev/build.md'
+          - "框架设计": 'docs/2.7/dev/design.md'
+          - "扩展点加载": 'docs/2.7/dev/SPI.md'
+          - "实现细节": 'docs/2.7/dev/implementation.md'
           - "SPI 扩展实现":
-              - "协议扩展": 'dev/impls/protocol.md'
-              - "调用拦截扩展": 'dev/impls/filter.md'
-              - "引用监听扩展": 'dev/impls/invoker-listener.md'
-              - "暴露监听扩展": 'dev/impls/exporter-listener.md'
-              - "集群扩展": 'dev/impls/cluster.md'
-              - "路由扩展": 'dev/impls/router.md'
-              - "负载均衡扩展": 'dev/impls/load-balance.md'
-              - "合并结果扩展": 'dev/impls/merger.md'
-              - "注册中心扩展": 'dev/impls/registry.md'
-              - "监控中心扩展": 'dev/impls/monitor.md'
-              - "扩展点加载扩展": 'dev/impls/extension-factory.md'
-              - "动态代理扩展": 'dev/impls/proxy-factory.md'
-              - "编译器扩展": 'dev/impls/compiler.md'
-              - "消息派发扩展": 'dev/impls/dispatcher.md'
-              - "线程池扩展": 'dev/impls/threadpool.md'
-              - "序列化扩展": 'dev/impls/serialize.md'
-              - "网络传输扩展": 'dev/impls/remoting.md'
-              - "信息交换扩展": 'dev/impls/exchanger.md'
-              - "组网扩展": 'dev/impls/networker.md'
-              - "Telnet 命令扩展": 'dev/impls/telnet-handler.md'
-              - "状态检查扩展": 'dev/impls/status-checker.md'
-              - "容器扩展": 'dev/impls/container.md'
-              - "页面扩展": 'dev/impls/page.md'
-              - "缓存扩展": 'dev/impls/cache.md'
-              - "验证扩展": 'dev/impls/validation.md'
-              - "日志适配扩展": 'dev/impls/logger-adapter.md'
-              - "配置中心": 'dev/impls/config-center.md'
-          - "公共契约": 'dev/contract.md'
-          - "编码约定": 'dev/coding.md'
+              - "协议扩展": 'docs/2.7/dev/impls/protocol.md'
+              - "调用拦截扩展": 'docs/2.7/dev/impls/filter.md'
+              - "引用监听扩展": 'docs/2.7/dev/impls/invoker-listener.md'
+              - "暴露监听扩展": 'docs/2.7/dev/impls/exporter-listener.md'
+              - "集群扩展": 'docs/2.7/dev/impls/cluster.md'
+              - "路由扩展": 'docs/2.7/dev/impls/router.md'
+              - "负载均衡扩展": 'docs/2.7/dev/impls/load-balance.md'
+              - "合并结果扩展": 'docs/2.7/dev/impls/merger.md'
+              - "注册中心扩展": 'docs/2.7/dev/impls/registry.md'
+              - "监控中心扩展": 'docs/2.7/dev/impls/monitor.md'
+              - "扩展点加载扩展": 'docs/2.7/dev/impls/extension-factory.md'
+              - "动态代理扩展": 'docs/2.7/dev/impls/proxy-factory.md'
+              - "编译器扩展": 'docs/2.7/dev/impls/compiler.md'
+              - "消息派发扩展": 'docs/2.7/dev/impls/dispatcher.md'
+              - "线程池扩展": 'docs/2.7/dev/impls/threadpool.md'
+              - "序列化扩展": 'docs/2.7/dev/impls/serialize.md'
+              - "网络传输扩展": 'docs/2.7/dev/impls/remoting.md'
+              - "信息交换扩展": 'docs/2.7/dev/impls/exchanger.md'
+              - "组网扩展": 'docs/2.7/dev/impls/networker.md'
+              - "Telnet 命令扩展": 'docs/2.7/dev/impls/telnet-handler.md'
+              - "状态检查扩展": 'docs/2.7/dev/impls/status-checker.md'
+              - "容器扩展": 'docs/2.7/dev/impls/container.md'
+              - "页面扩展": 'docs/2.7/dev/impls/page.md'
+              - "缓存扩展": 'docs/2.7/dev/impls/cache.md'
+              - "验证扩展": 'docs/2.7/dev/impls/validation.md'
+              - "日志适配扩展": 'docs/2.7/dev/impls/logger-adapter.md'
+              - "配置中心": 'docs/2.7/dev/impls/config-center.md'
+          - "公共契约": 'docs/2.7/dev/contract.md'
+          - "编码约定": 'docs/2.7/dev/coding.md'
           - "设计原则":
-              - "魔鬼在细节": 'dev/principals/code-detail.md'
-              - "一些设计上的基本常识": 'dev/principals/general-knowledge.md'
-              - "谈谈扩充式扩展与增量式扩展": 'dev/principals/expansibility.md'
-              - "配置设计": 'dev/principals/configuration.md'
-              - "设计实现的健壮性": 'dev/principals/robustness.md'
-              - "防痴呆设计": 'dev/principals/dummy.md'
-              - "扩展点重构": 'dev/principals/extension.md'
-          - "版本发布": 'dev/release.md'
-          - "贡献代码": 'dev/contribution.md'
-          - "检查列表": 'dev/checklist.md'
-          - "坏味道": 'dev/code-smell.md'
-          - "兼容性测试": 'dev/TCK.md'
+              - "魔鬼在细节": 'docs/2.7/dev/principals/code-detail.md'
+              - "一些设计上的基本常识": 'docs/2.7/dev/principals/general-knowledge.md'
+              - "谈谈扩充式扩展与增量式扩展": 'docs/2.7/dev/principals/expansibility.md'
+              - "配置设计": 'docs/2.7/dev/principals/configuration.md'
+              - "设计实现的健壮性": 'docs/2.7/dev/principals/robustness.md'
+              - "防痴呆设计": 'docs/2.7/dev/principals/dummy.md'
+              - "扩展点重构": 'docs/2.7/dev/principals/extension.md'
+          - "版本发布": 'docs/2.7/dev/release.md'
+          - "贡献代码": 'docs/2.7/dev/contribution.md'
+          - "检查列表": 'docs/2.7/dev/checklist.md'
+          - "坏味道": 'docs/2.7/dev/code-smell.md'
+          - "兼容性测试": 'docs/2.7/dev/TCK.md'
       - "管理者文档":
-        - "Dubbo Admin介绍": 'admin/introduction.md'
-        - "服务搜索和详情": 'admin/serviceSearch.md'
-        - "服务治理": 'admin/serviceGovernance.md'
-        - "服务测试": 'admin/serviceTest.md'
+        - "Dubbo Admin介绍": 'docs/2.7/admin/introduction.md'
+        - "服务搜索和详情": 'docs/2.7/admin/serviceSearch.md'
+        - "服务治理": 'docs/2.7/admin/serviceGovernance.md'
+        - "服务测试": 'docs/2.7/admin/serviceTest.md'
     - "3.0":
         - "User's Guide":
             - "Preface":
@@ -173,8 +173,8 @@ nav:
   - "Blog":
       - "2019-2020回顾": 'blog/apache-dubbo-2019-2020.md'
       - "服务测试": 'blog/service-test.md'
-      - "Dubbo server asynchronous": 'blog/dubboAsync_server.md'
-      - "Dubbo client asynchronous": 'blog/dubboAsync_client.md'
+      - "Dubbo服务端异步接口的实现背景和实践": 'blog/dubboAsync_server.md'
+      - "Dubbo客户端异步接口的实现背景和实践": 'blog/dubboAsync_client.md'
       - "Fescar to ensure Dubbo Microservices consistency": 'blog/dubbo-fescar.md'
       - "Prepare an Apache Release": 'blog/prepare-an-apache-release.md'
       - "Dubbo protocol": 'blog/dubbo-protocol.md'
