--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -183,6 +183,9 @@ nav:
   - "Blog":
       - "dubbo在瓜子二手车的实践": 'blog/dubbo-practice-from-guazi.md'
       - "2019-2020回顾": 'blog/apache-dubbo-2019-2020.md'
+      - "2.7.5 里程碑版本正式发布：支持 gRPC、性能提升 30%": 'blog/2.7.5-release.md'
+      - "Dubbo 在跨语言和协议穿透性方向上的探索：支持 HTTP/2 gRPC 和 Protobuf": 'blog/Dubbo-supporting-gRPC-HTTP2-and-protobuf.md'
+      - "使用 Dubbo 连接异构微服务体系": 'blog/connect-heterogeneous-microservices.md'
       - "服务测试": 'blog/service-test.md'
       - "Dubbo服务端异步接口的实现背景和实践": 'blog/dubboAsync_server.md'
       - "Dubbo客户端异步接口的实现背景和实践": 'blog/dubboAsync_client.md'
@@ -194,12 +197,12 @@ nav:
       - "在 Dubbo 应用中使用 Zookeeper": 'blog/dubbo-zk.md'
       - "在 Dubbo 中使用注解": 'blog/dubbo-annotation.md'
       - "Dubbo可扩展机制实战": 'blog/introduction-to-dubbo-spi.md'
-      - "Source code analysis of spring-boot+Dubbo App start and stop": 'blog/spring-boot-dubbo-start-stop-analysis.md'
-      - "Dubbo extensible mechanism source code analysis": 'blog/introduction-to-dubbo-spi-2.md'
-      - "Manipulating Services Dynamically via QoS": 'blog/introduction-to-dubbo-qos.md'
-      - "Dubbo Loadbalance": 'blog/dubbo-loadbalance.md'
-      - "Sentinel: The flow sentinel of Dubbo service": 'blog/sentinel-introduction-for-dubbo.md'
-      - "Tracking with Pinpoint": 'blog/pinpoint.md'
+      - "Spring Boot Dubbo应用启停源码分析": 'blog/spring-boot-dubbo-start-stop-analysis.md'
+      - "Dubbo可扩展机制源码解析": 'blog/introduction-to-dubbo-spi-2.md'
+      - "通过QoS对服务进行动态控制": 'blog/introduction-to-dubbo-qos.md'
+      - "Dubbo的负载均衡": 'blog/dubbo-loadbalance.md'
+      - "Sentinel 为 Dubbo 服务保驾护航": 'blog/sentinel-introduction-for-dubbo.md'
+      - "使用Pinpoint做分布式跟踪": 'blog/pinpoint.md'
   - "开发者指引":
       - "如何做出贡献": 'developers/guide_dev.md'
       - "开发者": 'developers/developers_dev.md'
