--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -161,6 +161,16 @@ nav:
           - "检查列表": 'docs/2.7/dev/checklist.md'
           - "坏味道": 'docs/2.7/dev/code-smell.md'
           - "兼容性测试": 'docs/2.7/dev/TCK.md'
+      - "源码导读":
+        - "Dubbo SPI": 'docs/2.7/source_code_guide/dubbo-spi.md'
+        - "自适应拓展机制": 'docs/2.7/source_code_guide/adaptive-extension.md'
+        - "服务导出": 'docs/2.7/source_code_guide/export-service.md'
+        - "服务引入": 'docs/2.7/source_code_guide/refer-service.md'
+        - "服务字典": 'docs/2.7/source_code_guide/directory.md'
+        - "服务路由": 'docs/2.7/source_code_guide/router.md'
+        - "集群": 'docs/2.7/source_code_guide/cluster.md'
+        - "负载均衡": 'docs/2.7/source_code_guide/loadbalance.md'
+        - "服务调用过程": 'docs/2.7/source_code_guide/service-invoking-process.md'
       - "管理者文档":
         - "Dubbo Admin介绍": 'docs/2.7/admin/introduction.md'
         - "服务搜索和详情": 'docs/2.7/admin/serviceSearch.md'
@@ -171,24 +181,28 @@ nav:
             - "Preface":
                 - "Bakcground": 'docs/3.0/user/preface/background.md'
   - "Blog":
+      - "dubbo在瓜子二手车的实践": 'blog/dubbo-practice-from-guazi.md'
       - "2019-2020回顾": 'blog/apache-dubbo-2019-2020.md'
+      - "2.7.5 里程碑版本正式发布：支持 gRPC、性能提升 30%": 'blog/2.7.5-release.md'
+      - "Dubbo 在跨语言和协议穿透性方向上的探索：支持 HTTP/2 gRPC 和 Protobuf": 'blog/Dubbo-supporting-gRPC-HTTP2-and-protobuf.md'
+      - "使用 Dubbo 连接异构微服务体系": 'blog/connect-heterogeneous-microservices.md'
       - "服务测试": 'blog/service-test.md'
       - "Dubbo服务端异步接口的实现背景和实践": 'blog/dubboAsync_server.md'
       - "Dubbo客户端异步接口的实现背景和实践": 'blog/dubboAsync_client.md'
-      - "Fescar to ensure Dubbo Microservices consistency": 'blog/dubbo-fescar.md'
-      - "Prepare an Apache Release": 'blog/prepare-an-apache-release.md'
+      - "如何使用Fescar保证Dubbo微服务间的一致性": 'blog/dubbo-fescar.md'
+      - "如何准备Apache Release": 'blog/prepare-an-apache-release.md'
       - "Dubbo protocol": 'blog/dubbo-protocol.md'
-      - "Your First Dubbo Demo": 'blog/dubbo-101.md'
-      - "Your First Dubbo filter": 'blog/first-dubbo-filter.md'
-      - "Using Zookeeper in Dubbo": 'blog/dubbo-zk.md'
-      - "Using annotation in Dubbo": 'blog/dubbo-annotation.md'
-      - "Introduction to Dubbo spi": 'blog/introduction-to-dubbo-spi.md'
-      - "Source code analysis of spring-boot+Dubbo App start and stop": 'blog/spring-boot-dubbo-start-stop-analysis.md'
-      - "Dubbo extensible mechanism source code analysis": 'blog/introduction-to-dubbo-spi-2.md'
-      - "Manipulating Services Dynamically via QoS": 'blog/introduction-to-dubbo-qos.md'
-      - "Dubbo Loadbalance": 'blog/dubbo-loadbalance.md'
-      - "Sentinel: The flow sentinel of Dubbo service": 'blog/sentinel-introduction-for-dubbo.md'
-      - "Tracking with Pinpoint": 'blog/pinpoint.md'
+      - "第一个 Dubbo 应用": 'blog/dubbo-101.md'
+      - "第一个Dubbo Filter": 'blog/first-dubbo-filter.md'
+      - "在 Dubbo 应用中使用 Zookeeper": 'blog/dubbo-zk.md'
+      - "在 Dubbo 中使用注解": 'blog/dubbo-annotation.md'
+      - "Dubbo可扩展机制实战": 'blog/introduction-to-dubbo-spi.md'
+      - "Spring Boot Dubbo应用启停源码分析": 'blog/spring-boot-dubbo-start-stop-analysis.md'
+      - "Dubbo可扩展机制源码解析": 'blog/introduction-to-dubbo-spi-2.md'
+      - "通过QoS对服务进行动态控制": 'blog/introduction-to-dubbo-qos.md'
+      - "Dubbo的负载均衡": 'blog/dubbo-loadbalance.md'
+      - "Sentinel 为 Dubbo 服务保驾护航": 'blog/sentinel-introduction-for-dubbo.md'
+      - "使用Pinpoint做分布式跟踪": 'blog/pinpoint.md'
   - "开发者指引":
       - "如何做出贡献": 'developers/guide_dev.md'
       - "开发者": 'developers/developers_dev.md'
