update blog name

--- a/mkdocs_en.yml
+++ b/mkdocs_en.yml
@@ -4,6 +4,7 @@ edit_uri: https://github.com/apache/dubbo-website/edit/master/en-us/
 site_description: >-
   Apache Dubbo™ is a Microservices Framework。
 docs_dir: 'en-us'
+site_url: 'https://dubbo.apache.org/en-us/'
 
 copyright: 'Copyright © 2018-2020 The Apache Software Foundation. Apache and the Apache feather logo are trademarks of The Apache Software Foundation.'
 
