--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -4,6 +4,7 @@ edit_uri: https://github.com/apache/dubbo-website/edit/master/zh-cn/
 site_description: >-
   Apache Dubbo™ 是一款微服务框架（Microservices Framework），它提供高性能 RPC 通信、服务发现、流量管理等服务治理能力，为你提供构建大规模微服务集群所需的全套解决方案。
 docs_dir: 'zh-cn'
+site_url: 'https://dubbo.apache.org/zh-cn/'
 
 nav:
   - "首页": 'index.md'
@@ -180,29 +181,68 @@ nav:
         - "User's Guide":
             - "Preface":
                 - "Bakcground": 'docs/3.0/user/preface/background.md'
-  - "Blog":
+  - "博客":
       - "dubbo在瓜子二手车的实践": 'blog/dubbo-practice-from-guazi.md'
-      - "2019-2020回顾": 'blog/apache-dubbo-2019-2020.md'
+      - "从 2019 到 2020，Apache Dubbo 年度回顾与总结": 'blog/apache-dubbo-2019-2020.md'
       - "2.7.5 里程碑版本正式发布：支持 gRPC、性能提升 30%": 'blog/2.7.5-release.md'
       - "Dubbo 在跨语言和协议穿透性方向上的探索：支持 HTTP/2 gRPC 和 Protobuf": 'blog/Dubbo-supporting-gRPC-HTTP2-and-protobuf.md'
       - "使用 Dubbo 连接异构微服务体系": 'blog/connect-heterogeneous-microservices.md'
-      - "服务测试": 'blog/service-test.md'
-      - "Dubbo服务端异步接口的实现背景和实践": 'blog/dubboAsync_server.md'
-      - "Dubbo客户端异步接口的实现背景和实践": 'blog/dubboAsync_client.md'
-      - "如何使用Fescar保证Dubbo微服务间的一致性": 'blog/dubbo-fescar.md'
-      - "如何准备Apache Release": 'blog/prepare-an-apache-release.md'
-      - "Dubbo protocol": 'blog/dubbo-protocol.md'
-      - "第一个 Dubbo 应用": 'blog/dubbo-101.md'
-      - "第一个Dubbo Filter": 'blog/first-dubbo-filter.md'
-      - "在 Dubbo 应用中使用 Zookeeper": 'blog/dubbo-zk.md'
-      - "在 Dubbo 中使用注解": 'blog/dubbo-annotation.md'
-      - "Dubbo可扩展机制实战": 'blog/introduction-to-dubbo-spi.md'
-      - "Spring Boot Dubbo应用启停源码分析": 'blog/spring-boot-dubbo-start-stop-analysis.md'
-      - "Dubbo可扩展机制源码解析": 'blog/introduction-to-dubbo-spi-2.md'
-      - "通过QoS对服务进行动态控制": 'blog/introduction-to-dubbo-qos.md'
-      - "Dubbo的负载均衡": 'blog/dubbo-loadbalance.md'
-      - "Sentinel 为 Dubbo 服务保驾护航": 'blog/sentinel-introduction-for-dubbo.md'
-      - "使用Pinpoint做分布式跟踪": 'blog/pinpoint.md'
+      - "Dubbo一致性Hash负载均衡实现剖析": 'blog/dubbo-consistent-hash-implementation.md'
+      - "浅谈 RPC": 'blog/rpc-introduction.md'
+      - "在DockerHub发布Dubbo Admin镜像": 'blog/build-new-docker-image-in-dockerhub.md'
+      - "研究 Dubbo 网卡地址注册时的一点思考": 'blog/dubbo-network-interfaces.md'
+      - "Dubbo 本地存根和本地伪装": 'blog/.md'
+      - "Dubbo2.7 三大新特性详解": 'blog/.md'
+      - "Dubbo 本地调用": 'blog/.md'
+      - "Dubbo优雅停机介绍": 'blog/.md'
+      - "Dubbo客户端异步接口的实现背景和实践": 'blog/.md'
+      - "Dubbo Admin服务测试介绍": 'blog/.md'
+      - "新版本Dubbo Admin介绍": 'blog/.md'
+      - "如何使用Fescar保证Dubbo微服务间的一致性": 'blog/.md'
+      - "Dubbo 注解驱动": 'blog/.md'
+      - "Dubbo 外部化配置": 'blog/.md'
+      - "Dubbo 注册中心 Nacos 整合": 'blog/.md'
+      - "Dubbo协议详解": 'blog/.md'
+      - "在 Dubbo 中使用 REST": 'blog/.md'
+      - "Dubbo 上下文信息": 'blog/.md'
+      - "Dubbo 博客文档中文排版指南": 'blog/.md'
+      - "Dubbo 中的 URL 统一模型": 'blog/.md'
+      - "Dubbo 现有心跳方案总结以及改进建议": 'blog/.md'
+      - "Dubbo 博客文档中文排版指南": 'blog/.md'
+      - "当Dubbo遇上Arthas：排查问题的实践": 'blog/.md'
+      - "Dubbo集群容错": 'blog/.md'
+      - "在 Dubbo 中使用 Zipkin": 'blog/.md'
+      - "Dubbo在Service Mesh下的思考和方案": 'blog/.md'
+      - "Dubbo Mesh ｜ Service Mesh的实践与探索": 'blog/.md'
+      - "遇见Dubbo": 'blog/.md'
+      - "Dubbo 2.7.x repackage后的兼容实现方案": 'blog/.md'
+      - "Dubbo与Kubernetes集成": 'blog/.md'
+      - "如何参与贡献Dubbo开源": 'blog/.md'
+      - "使用Skywalking追踪Dubbo服务": 'blog/.md'
+      - "如何准备Apache Release": 'blog/.md'
+      - "Dubbo服务分组和版本聚合": 'blog/.md'
+      - "Dubbo测试验证": 'blog/.md'
+      - "以Dubbo为例，聊聊如何向开源项目做贡献": 'blog/.md'
+      - "Spring应用快速集成Dubbo + Hystrix": 'blog/.md'
+      - "如何基于Dubbo实现全异步调用链": 'blog/.md'
+      - "Dubbo的负载均衡": 'blog/.md'
+      - "Dubbo的泛化调用": 'blog/.md'
+      - "如何准备一次Apache发布": 'blog/.md'
+      - "在 Dubbo 应用中使用 Zookeeper": 'blog/.md'
+      - "通过QoS对服务进行动态控制": 'blog/.md'
+      - "在 Dubbo 中使用注解": 'blog/.md'
+      - "从跨语言调用到 dubbo2.js": 'blog/.md'
+      - "Sentinel 为 Dubbo 服务保驾护航": 'blog/.md'
+      - "使用Pinpoint做分布式跟踪": 'blog/.md'
+      - "Dubbo 的同步与异步调用方式": 'blog/.md'
+      - "第一个Dubbo filter": 'blog/.md'
+      - "第一个 Dubbo 应用": 'blog/.md'
+      - "Dubbo基本用法之Provider配置": 'blog/.md'
+      - "谷歌编程之夏会议上2018个项目被宣布": 'blog/.md'
+      - "Spring Boot Dubbo应用启停源码分析": 'blog/.md'
+      - "优化技巧：提前if判断帮助CPU分支预测": 'blog/.md'
+      - "Dubbo可扩展机制实战": 'blog/.md'
+      - "Dubbo可扩展机制源码解析": 'blog/.md'
   - "开发者指引":
       - "如何做出贡献": 'developers/guide_dev.md'
       - "开发者": 'developers/developers_dev.md'
