--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -191,42 +191,41 @@ nav:
       - "浅谈 RPC": 'blog/rpc-introduction.md'
       - "在DockerHub发布Dubbo Admin镜像": 'blog/build-new-docker-image-in-dockerhub.md'
       - "研究 Dubbo 网卡地址注册时的一点思考": 'blog/dubbo-network-interfaces.md'
-      - "Dubbo 本地存根和本地伪装": 'blog/.md'
-      - "Dubbo2.7 三大新特性详解": 'blog/.md'
-      - "Dubbo 本地调用": 'blog/.md'
-      - "Dubbo优雅停机介绍": 'blog/.md'
-      - "Dubbo客户端异步接口的实现背景和实践": 'blog/.md'
-      - "Dubbo Admin服务测试介绍": 'blog/.md'
-      - "新版本Dubbo Admin介绍": 'blog/.md'
-      - "如何使用Fescar保证Dubbo微服务间的一致性": 'blog/.md'
-      - "Dubbo 注解驱动": 'blog/.md'
-      - "Dubbo 外部化配置": 'blog/.md'
-      - "Dubbo 注册中心 Nacos 整合": 'blog/.md'
-      - "Dubbo协议详解": 'blog/.md'
-      - "在 Dubbo 中使用 REST": 'blog/.md'
-      - "Dubbo 上下文信息": 'blog/.md'
-      - "Dubbo 博客文档中文排版指南": 'blog/.md'
-      - "Dubbo 中的 URL 统一模型": 'blog/.md'
-      - "Dubbo 现有心跳方案总结以及改进建议": 'blog/.md'
-      - "Dubbo 博客文档中文排版指南": 'blog/.md'
-      - "当Dubbo遇上Arthas：排查问题的实践": 'blog/.md'
-      - "Dubbo集群容错": 'blog/.md'
-      - "在 Dubbo 中使用 Zipkin": 'blog/.md'
-      - "Dubbo在Service Mesh下的思考和方案": 'blog/.md'
-      - "Dubbo Mesh ｜ Service Mesh的实践与探索": 'blog/.md'
-      - "遇见Dubbo": 'blog/.md'
-      - "Dubbo 2.7.x repackage后的兼容实现方案": 'blog/.md'
-      - "Dubbo与Kubernetes集成": 'blog/.md'
-      - "如何参与贡献Dubbo开源": 'blog/.md'
-      - "使用Skywalking追踪Dubbo服务": 'blog/.md'
-      - "如何准备Apache Release": 'blog/.md'
-      - "Dubbo服务分组和版本聚合": 'blog/.md'
-      - "Dubbo测试验证": 'blog/.md'
-      - "以Dubbo为例，聊聊如何向开源项目做贡献": 'blog/.md'
-      - "Spring应用快速集成Dubbo + Hystrix": 'blog/.md'
-      - "如何基于Dubbo实现全异步调用链": 'blog/.md'
-      - "Dubbo的负载均衡": 'blog/.md'
-      - "Dubbo的泛化调用": 'blog/.md'
+      - "Dubbo 本地存根和本地伪装": 'blog/dubbo-stub-mock.md'
+      - "Dubbo2.7 三大新特性详解": 'blog/dubbo-27-features.md'
+      - "Dubbo 本地调用": 'blog/dubbo-local-call.md'
+      - "Dubbo优雅停机介绍": 'blog/dubbo-gracefully-shutdown.md'
+      - "Dubbo客户端异步接口的实现背景和实践": 'blog/dubboAsync_client.md'
+      - "Dubbo Admin服务测试介绍": 'blog/service-test.md'
+      - "新版本Dubbo Admin介绍": 'blog/dubbo-admin.md'
+      - "如何使用Fescar保证Dubbo微服务间的一致性": 'blog/dubbo-fescar.md'
+      - "Dubbo 注解驱动": 'blog/dubbo-annotation-driven.md'
+      - "Dubbo 外部化配置": 'blog/dubbo-externalized-configuration.md'
+      - "Dubbo 注册中心 Nacos 整合": 'blog/dubbo-registry-nacos-integration.md'
+      - "Dubbo协议详解": 'blog/dubbo-protocol.md'
+      - "在 Dubbo 中使用 REST": 'blog/dubbo-rest.md'
+      - "Dubbo 上下文信息": 'blog/dubbo-context-information.md'
+      - "Dubbo 博客文档中文排版指南": 'blog/dubbo-copywriting-style.md'
+      - "Dubbo 中的 URL 统一模型": 'blog/introduction-to-dubbo-url.md'
+      - "Dubbo 现有心跳方案总结以及改进建议": 'blog/dubbo-heartbeat-design.md'
+      - "当Dubbo遇上Arthas：排查问题的实践": 'blog/dubbo-meet-arthas.md'
+      - "Dubbo集群容错": 'blog/dubbo-cluster-error-handling.md'
+      - "在 Dubbo 中使用 Zipkin": 'blog/use-zipkin-in-dubbo.md'
+      - "Dubbo在Service Mesh下的思考和方案": 'blog/dubbo-mesh-in-thinking.md'
+      - "Dubbo Mesh - Service Mesh的实践与探索": 'blog/dubbo-mesh-service-mesh-exploring.md'
+      - "遇见Dubbo": 'blog/meet-dubbo.md'
+      - "Dubbo 2.7.x repackage后的兼容实现方案": 'blog/dubbo-compatible.md'
+      - "Dubbo与Kubernetes集成": 'blog/dubbo-k8s.md'
+      - "如何参与贡献Dubbo开源": 'blog/how-to-involve-dubbo-community.md'
+      - "使用Skywalking追踪Dubbo服务": 'blog/tracing-with-skywalking.md'
+      - "如何准备Apache Release": 'blog/prepare-an-apache-release.md'
+      - "Dubbo服务分组和版本聚合": 'blog/service-and-version.md'
+      - "Dubbo测试验证": 'blog/test-verification.md'
+      - "以Dubbo为例，聊聊如何向开源项目做贡献": 'blog/dubbo-contribute-to-opensource.md'
+      - "Spring应用快速集成Dubbo + Hystrix": 'blog/dubbo-integrate-with-hystrix.md'
+      - "如何基于Dubbo实现全异步调用链": 'blog/dubbo-new-async.md'
+      - "Dubbo的负载均衡": 'blog/dubbo-loadbalance.md'
+      - "Dubbo的泛化调用": 'blog/dubbo-generic-invoke.md'
       - "如何准备一次Apache发布": 'blog/.md'
       - "在 Dubbo 应用中使用 Zookeeper": 'blog/.md'
       - "通过QoS对服务进行动态控制": 'blog/.md'
