--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -226,22 +226,22 @@ nav:
       - "如何基于Dubbo实现全异步调用链": 'blog/dubbo-new-async.md'
       - "Dubbo的负载均衡": 'blog/dubbo-loadbalance.md'
       - "Dubbo的泛化调用": 'blog/dubbo-generic-invoke.md'
-      - "如何准备一次Apache发布": 'blog/.md'
-      - "在 Dubbo 应用中使用 Zookeeper": 'blog/.md'
-      - "通过QoS对服务进行动态控制": 'blog/.md'
-      - "在 Dubbo 中使用注解": 'blog/.md'
-      - "从跨语言调用到 dubbo2.js": 'blog/.md'
-      - "Sentinel 为 Dubbo 服务保驾护航": 'blog/.md'
-      - "使用Pinpoint做分布式跟踪": 'blog/.md'
-      - "Dubbo 的同步与异步调用方式": 'blog/.md'
-      - "第一个Dubbo filter": 'blog/.md'
-      - "第一个 Dubbo 应用": 'blog/.md'
-      - "Dubbo基本用法之Provider配置": 'blog/.md'
-      - "谷歌编程之夏会议上2018个项目被宣布": 'blog/.md'
-      - "Spring Boot Dubbo应用启停源码分析": 'blog/.md'
-      - "优化技巧：提前if判断帮助CPU分支预测": 'blog/.md'
-      - "Dubbo可扩展机制实战": 'blog/.md'
-      - "Dubbo可扩展机制源码解析": 'blog/.md'
+      - "如何准备一次Apache发布": 'blog/prepare-an-apache-release.md'
+      - "在 Dubbo 应用中使用 Zookeeper": 'blog/dubbo-zk.md'
+      - "通过QoS对服务进行动态控制": 'blog/introduction-to-dubbo-qos.md'
+      - "在 Dubbo 中使用注解": 'blog/dubbo-annotation.md'
+      - "从跨语言调用到 dubbo2.js": 'blog/dubbo2-js.md'
+      - "Sentinel 为 Dubbo 服务保驾护航": 'blog/sentinel-introduction-for-dubbo.md'
+      - "使用Pinpoint做分布式跟踪": 'blog/pinpoint.md'
+      - "Dubbo 的同步与异步调用方式": 'blog/dubbo-invoke.md'
+      - "第一个Dubbo filter": 'blog/first-dubbo-filter.md'
+      - "第一个 Dubbo 应用": 'blog/dubbo-101.md'
+      - "Dubbo基本用法之Provider配置": 'blog/dubbo-basic-usage-dubbo-provider-configuration.md'
+      - "谷歌编程之夏会议上2018个项目被宣布": 'blog/gsoc-2018.md'
+      - "Spring Boot Dubbo应用启停源码分析": 'blog/spring-boot-dubbo-start-stop-analysis.md'
+      - "优化技巧：提前if判断帮助CPU分支预测": 'blog/optimization-branch-prediction.md'
+      - "Dubbo可扩展机制实战": 'blog/introduction-to-dubbo-spi-2.md'
+      - "Dubbo可扩展机制源码解析": 'blog/introduction-to-dubbo-spi.md'
   - "开发者指引":
       - "如何做出贡献": 'developers/guide_dev.md'
       - "开发者": 'developers/developers_dev.md'
