--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -56,7 +56,7 @@ nav:
               - "本地伪装": 'docs/2.7/user/demos/local-mock.md'
               - "延迟暴露": 'docs/2.7/user/demos/delay-publish.md'
               - "并发控制": 'docs/2.7/user/demos/concurrency-control.md'
-              - "连接控制": 'docs/2.7/user/demos/config-connection.md'
+              - "连接控制": 'docs/2.7/user/demos/config-connections.md'
               - "延迟连接": 'docs/2.7/user/demos/lazy-connect.md'
               - "粘滞连接": 'docs/2.7/user/demos/stickiness.md'
               - "令牌验证": 'docs/2.7/user/demos/token-authorization.md'
@@ -73,7 +73,7 @@ nav:
               - "Netty4": 'docs/2.7/user/demos/netty4.md'
               - "Kryo和FST序列化": 'docs/2.7/user/demos/serialization.md'
               - "简化注册中心URL": 'docs/2.7/user/demos/simplify-registry-data.md'
-              - "API 参考手册": 'docs/2.7/user/demos/api.md'
+              - "API 参考手册": 'docs/2.7/user/references/api.md'
           - "schema 配置参考手册":
               - "简介": 'docs/2.7/user/references/xml/introduction.md'
               - "dubbo:service": 'docs/2.7/user/references/xml/dubbo-service.md'
@@ -111,7 +111,7 @@ nav:
           - "推荐用法": 'docs/2.7/user/recommend.md'
           - "容量规划": 'docs/2.7/user/capacity-plan.md'
           - "性能测试报告": 'docs/2.7/user/perf-test.md'
-          - "测试覆盖率报告": 'docs/2.7/user/covergence.md'
+          - "测试覆盖率报告": 'docs/2.7/user/coveragence.md'
           - "版本与升级":
               - "2.7.x升级步骤及注意事项": 'docs/2.7/user/versions/version-270.md'
       - "开发手册":
@@ -245,23 +245,23 @@ nav:
   - "开发者指引":
       - "如何做出贡献": 'developers/guide_dev.md'
       - "开发者": 'developers/developers_dev.md'
-      - "使用指南":
+      - "User Guide":
           - "faq": 'developers/user-guide/faq_dev.md'
-      - "贡献者指南":
-          - "New contributor guide": 'developers/contributor-guide/new-contributor-guide_dev.md'
-          - "Software donation guide": 'developers/contributor-guide/software-donation-guide_dev.md'
-          - "Test coverage guide": 'developers/contributor-guide/test-coverage-guide_dev.md'
-          - "Mailing list subscription guide": 'developers/contributor-guide/mailing-list-subscription-guide_dev.md'
-          - "CLA Signing Guide": 'developers/contributor-guide/cla-signing-guide_dev.md'
-          - "Extension guide": 'developers/contributor-guide/dubbo-extension-guide_dev.md'
-          - "How to become a committer": 'developers/contributor-guide/become-a-committer_dev.md'
-          - "How to report security issues": 'developers/reporting-security-issues_dev.md'
+      - "Contributor Guide":
+          - "新贡献者向导": 'developers/contributor-guide/new-contributor-guide_dev.md'
+          - "软件捐献向导": 'developers/contributor-guide/software-donation-guide_dev.md'
+          - "测试覆盖率向导": 'developers/contributor-guide/test-coverage-guide_dev.md'
+          - "邮件列表订阅向导": 'developers/contributor-guide/mailing-list-subscription-guide_dev.md'
+          - "CLA签署向导": 'developers/contributor-guide/cla-signing-guide_dev.md'
+          - "Dubbo Extension向导": 'developers/contributor-guide/dubbo-extension-guide_dev.md'
+          - "如何成为Dubbo committer": 'developers/contributor-guide/become-a-committer_dev.md'
+          - "报告安全问题": 'developers/reporting-security-issues_dev.md'
       - "提交者指南":
-          - "New Committer guide": 'developers/committer-guide/new-committer-guide_dev.md'
-          - "Label an Issue": 'developers/committer-guide/label-an-issue-guide_dev.md'
-          - "Website Guide": 'developers/committer-guide/website-guide_dev.md'
-          - "Apache Dubbo Page Maintenance": 'developers/committer-guide/apache-dubbo-page_dev.md'
-          - "Release Guide": 'developers/committer-guide/release-guide_dev.md'
+          - "Apache 提交者注册流程": 'developers/committer-guide/new-committer-guide_dev.md'
+          - "给问题打标签": 'developers/committer-guide/label-an-issue-guide_dev.md'
+          - "网站向导": 'developers/committer-guide/website-guide_dev.md'
+          - "Dubbo主页的维护": 'developers/committer-guide/apache-dubbo-page_dev.md'
+          - "版本发布向导": 'developers/committer-guide/release-guide_dev.md'
   - "下载":
       - "版本列表": "blog/download.md"
 # Configuration
