--- a/mkdocs_en.yml
+++ b/mkdocs_en.yml
@@ -56,7 +56,7 @@ nav:
             - "Local mock": 'docs/2.7/user/demos/local-mock.md'
             - "Delay publish": 'docs/2.7/user/demos/delay-publish.md'
             - "Concurrency limit": 'docs/2.7/user/demos/concurrency-control.md'
-            - "Connection limit": 'docs/2.7/user/demos/config-connection.md'
+            - "Connection limit": 'docs/2.7/user/demos/config-connections.md'
             - "Lazy connec": 'docs/2.7/user/demos/lazy-connect.md'
             - "Stickness connection": 'docs/2.7/user/demos/stickiness.md'
             - "Token authorization": 'docs/2.7/user/demos/token-authorization.md'
@@ -73,7 +73,7 @@ nav:
             - "Netty4": 'docs/2.7/user/demos/netty4.md'
             - "Kryo&FST serialization": 'docs/2.7/user/demos/serialization.md'
             - "Simplified registry URL": 'docs/2.7/user/demos/simplify-registry-data.md'
-            - "API reference": 'docs/2.7/user/demos/api.md'
+            - "API reference": 'docs/2.7/user/reference/api.md'
         - "Schema reference":
             - "Introduction": 'docs/2.7/user/references/xml/introduction.md'
             - "dubbo:service": 'docs/2.7/user/references/xml/dubbo-service.md'
@@ -110,7 +110,7 @@ nav:
         - "Recommendation": 'docs/2.7/user/recommend.md'
         - "Capacity plan": 'docs/2.7/user/capacity-plan.md'
         - "Benchmark": 'docs/2.7/user/perf-test.md'
-        - "Code coverange": 'docs/2.7/user/covergence.md'
+        - "Code coverange": 'docs/2.7/user/coveragence.md'
       - "Developer's Guide":
         - "How to Build": 'docs/2.7/dev/build.md'
         - "Architecture": 'docs/2.7/dev/design.md'
