--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -256,7 +256,7 @@ nav:
           - "Dubbo Extension向导": 'developers/contributor-guide/dubbo-extension-guide_dev.md'
           - "如何成为Dubbo committer": 'developers/contributor-guide/become-a-committer_dev.md'
           - "报告安全问题": 'developers/contributor-guide/reporting-security-issues_dev.md'
-      - "提交者指南":
+      - "Committer Guide":
           - "Apache 提交者注册流程": 'developers/committer-guide/new-committer-guide_dev.md'
           - "给问题打标签": 'developers/committer-guide/label-an-issue-guide_dev.md'
           - "网站向导": 'developers/committer-guide/website-guide_dev.md'
