--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -4,6 +4,7 @@ edit_uri: https://github.com/apache/dubbo-website/edit/master/zh-cn/
 site_description: >-
   Apache Dubbo™ 是一款微服务框架（Microservices Framework），它提供高性能 RPC 通信、服务发现、流量管理等服务治理能力，为你提供构建大规模微服务集群所需的全套解决方案。
 docs_dir: 'zh-cn'
+site_url: 'https://dubbo.apache.org/zh-cn/'
 
 nav:
   - "首页": 'index.md'
@@ -55,7 +56,7 @@ nav:
               - "本地伪装": 'docs/2.7/user/demos/local-mock.md'
               - "延迟暴露": 'docs/2.7/user/demos/delay-publish.md'
               - "并发控制": 'docs/2.7/user/demos/concurrency-control.md'
-              - "连接控制": 'docs/2.7/user/demos/config-connection.md'
+              - "连接控制": 'docs/2.7/user/demos/config-connections.md'
               - "延迟连接": 'docs/2.7/user/demos/lazy-connect.md'
               - "粘滞连接": 'docs/2.7/user/demos/stickiness.md'
               - "令牌验证": 'docs/2.7/user/demos/token-authorization.md'
@@ -72,7 +73,7 @@ nav:
               - "Netty4": 'docs/2.7/user/demos/netty4.md'
               - "Kryo和FST序列化": 'docs/2.7/user/demos/serialization.md'
               - "简化注册中心URL": 'docs/2.7/user/demos/simplify-registry-data.md'
-              - "API 参考手册": 'docs/2.7/user/demos/api.md'
+              - "API 参考手册": 'docs/2.7/user/references/api.md'
           - "schema 配置参考手册":
               - "简介": 'docs/2.7/user/references/xml/introduction.md'
               - "dubbo:service": 'docs/2.7/user/references/xml/dubbo-service.md'
@@ -110,7 +111,7 @@ nav:
           - "推荐用法": 'docs/2.7/user/recommend.md'
           - "容量规划": 'docs/2.7/user/capacity-plan.md'
           - "性能测试报告": 'docs/2.7/user/perf-test.md'
-          - "测试覆盖率报告": 'docs/2.7/user/covergence.md'
+          - "测试覆盖率报告": 'docs/2.7/user/coveragence.md'
           - "版本与升级":
               - "2.7.x升级步骤及注意事项": 'docs/2.7/user/versions/version-270.md'
       - "开发手册":
@@ -180,49 +181,87 @@ nav:
         - "User's Guide":
             - "Preface":
                 - "Bakcground": 'docs/3.0/user/preface/background.md'
-  - "Blog":
+  - "博客":
       - "dubbo在瓜子二手车的实践": 'blog/dubbo-practice-from-guazi.md'
-      - "2019-2020回顾": 'blog/apache-dubbo-2019-2020.md'
+      - "从 2019 到 2020，Apache Dubbo 年度回顾与总结": 'blog/apache-dubbo-2019-2020.md'
       - "2.7.5 里程碑版本正式发布：支持 gRPC、性能提升 30%": 'blog/2.7.5-release.md'
       - "Dubbo 在跨语言和协议穿透性方向上的探索：支持 HTTP/2 gRPC 和 Protobuf": 'blog/Dubbo-supporting-gRPC-HTTP2-and-protobuf.md'
       - "使用 Dubbo 连接异构微服务体系": 'blog/connect-heterogeneous-microservices.md'
-      - "服务测试": 'blog/service-test.md'
-      - "Dubbo服务端异步接口的实现背景和实践": 'blog/dubboAsync_server.md'
+      - "Dubbo一致性Hash负载均衡实现剖析": 'blog/dubbo-consistent-hash-implementation.md'
+      - "浅谈 RPC": 'blog/rpc-introduction.md'
+      - "在DockerHub发布Dubbo Admin镜像": 'blog/build-new-docker-image-in-dockerhub.md'
+      - "研究 Dubbo 网卡地址注册时的一点思考": 'blog/dubbo-network-interfaces.md'
+      - "Dubbo 本地存根和本地伪装": 'blog/dubbo-stub-mock.md'
+      - "Dubbo2.7 三大新特性详解": 'blog/dubbo-27-features.md'
+      - "Dubbo 本地调用": 'blog/dubbo-local-call.md'
+      - "Dubbo优雅停机介绍": 'blog/dubbo-gracefully-shutdown.md'
       - "Dubbo客户端异步接口的实现背景和实践": 'blog/dubboAsync_client.md'
+      - "Dubbo Admin服务测试介绍": 'blog/service-test.md'
+      - "新版本Dubbo Admin介绍": 'blog/dubbo-admin.md'
       - "如何使用Fescar保证Dubbo微服务间的一致性": 'blog/dubbo-fescar.md'
+      - "Dubbo 注解驱动": 'blog/dubbo-annotation-driven.md'
+      - "Dubbo 外部化配置": 'blog/dubbo-externalized-configuration.md'
+      - "Dubbo 注册中心 Nacos 整合": 'blog/dubbo-registry-nacos-integration.md'
+      - "Dubbo协议详解": 'blog/dubbo-protocol.md'
+      - "在 Dubbo 中使用 REST": 'blog/dubbo-rest.md'
+      - "Dubbo 上下文信息": 'blog/dubbo-context-information.md'
+      - "Dubbo 博客文档中文排版指南": 'blog/dubbo-copywriting-style.md'
+      - "Dubbo 中的 URL 统一模型": 'blog/introduction-to-dubbo-url.md'
+      - "Dubbo 现有心跳方案总结以及改进建议": 'blog/dubbo-heartbeat-design.md'
+      - "当Dubbo遇上Arthas：排查问题的实践": 'blog/dubbo-meet-arthas.md'
+      - "Dubbo集群容错": 'blog/dubbo-cluster-error-handling.md'
+      - "在 Dubbo 中使用 Zipkin": 'blog/use-zipkin-in-dubbo.md'
+      - "Dubbo在Service Mesh下的思考和方案": 'blog/dubbo-mesh-in-thinking.md'
+      - "Dubbo Mesh - Service Mesh的实践与探索": 'blog/dubbo-mesh-service-mesh-exploring.md'
+      - "遇见Dubbo": 'blog/meet-dubbo.md'
+      - "Dubbo 2.7.x repackage后的兼容实现方案": 'blog/dubbo-compatible.md'
+      - "Dubbo与Kubernetes集成": 'blog/dubbo-k8s.md'
+      - "如何参与贡献Dubbo开源": 'blog/how-to-involve-dubbo-community.md'
+      - "使用Skywalking追踪Dubbo服务": 'blog/tracing-with-skywalking.md'
       - "如何准备Apache Release": 'blog/prepare-an-apache-release.md'
-      - "Dubbo protocol": 'blog/dubbo-protocol.md'
-      - "第一个 Dubbo 应用": 'blog/dubbo-101.md'
-      - "第一个Dubbo Filter": 'blog/first-dubbo-filter.md'
-      - "在 Dubbo 应用中使用 Zookeeper": 'blog/dubbo-zk.md'
-      - "在 Dubbo 中使用注解": 'blog/dubbo-annotation.md'
-      - "Dubbo可扩展机制实战": 'blog/introduction-to-dubbo-spi.md'
-      - "Spring Boot Dubbo应用启停源码分析": 'blog/spring-boot-dubbo-start-stop-analysis.md'
-      - "Dubbo可扩展机制源码解析": 'blog/introduction-to-dubbo-spi-2.md'
-      - "通过QoS对服务进行动态控制": 'blog/introduction-to-dubbo-qos.md'
+      - "Dubbo服务分组和版本聚合": 'blog/service-and-version.md'
+      - "Dubbo测试验证": 'blog/test-verification.md'
+      - "以Dubbo为例，聊聊如何向开源项目做贡献": 'blog/dubbo-contribute-to-opensource.md'
+      - "Spring应用快速集成Dubbo + Hystrix": 'blog/dubbo-integrate-with-hystrix.md'
+      - "如何基于Dubbo实现全异步调用链": 'blog/dubbo-new-async.md'
       - "Dubbo的负载均衡": 'blog/dubbo-loadbalance.md'
+      - "Dubbo的泛化调用": 'blog/dubbo-generic-invoke.md'
+      - "如何准备一次Apache发布": 'blog/prepare-an-apache-release.md'
+      - "在 Dubbo 应用中使用 Zookeeper": 'blog/dubbo-zk.md'
+      - "通过QoS对服务进行动态控制": 'blog/introduction-to-dubbo-qos.md'
+      - "在 Dubbo 中使用注解": 'blog/dubbo-annotation.md'
+      - "从跨语言调用到 dubbo2.js": 'blog/dubbo2-js.md'
       - "Sentinel 为 Dubbo 服务保驾护航": 'blog/sentinel-introduction-for-dubbo.md'
       - "使用Pinpoint做分布式跟踪": 'blog/pinpoint.md'
+      - "Dubbo 的同步与异步调用方式": 'blog/dubbo-invoke.md'
+      - "第一个Dubbo filter": 'blog/first-dubbo-filter.md'
+      - "第一个 Dubbo 应用": 'blog/dubbo-101.md'
+      - "Dubbo基本用法之Provider配置": 'blog/dubbo-basic-usage-dubbo-provider-configuration.md'
+      - "谷歌编程之夏会议上2018个项目被宣布": 'blog/gsoc-2018.md'
+      - "Spring Boot Dubbo应用启停源码分析": 'blog/spring-boot-dubbo-start-stop-analysis.md'
+      - "优化技巧：提前if判断帮助CPU分支预测": 'blog/optimization-branch-prediction.md'
+      - "Dubbo可扩展机制实战": 'blog/introduction-to-dubbo-spi-2.md'
+      - "Dubbo可扩展机制源码解析": 'blog/introduction-to-dubbo-spi.md'
   - "开发者指引":
       - "如何做出贡献": 'developers/guide_dev.md'
       - "开发者": 'developers/developers_dev.md'
-      - "使用指南":
+      - "User Guide":
           - "faq": 'developers/user-guide/faq_dev.md'
-      - "贡献者指南":
-          - "New contributor guide": 'developers/contributor-guide/new-contributor-guide_dev.md'
-          - "Software donation guide": 'developers/contributor-guide/software-donation-guide_dev.md'
-          - "Test coverage guide": 'developers/contributor-guide/test-coverage-guide_dev.md'
-          - "Mailing list subscription guide": 'developers/contributor-guide/mailing-list-subscription-guide_dev.md'
-          - "CLA Signing Guide": 'developers/contributor-guide/cla-signing-guide_dev.md'
-          - "Extension guide": 'developers/contributor-guide/dubbo-extension-guide_dev.md'
-          - "How to become a committer": 'developers/contributor-guide/become-a-committer_dev.md'
-          - "How to report security issues": 'developers/reporting-security-issues_dev.md'
-      - "提交者指南":
-          - "New Committer guide": 'developers/committer-guide/new-committer-guide_dev.md'
-          - "Label an Issue": 'developers/committer-guide/label-an-issue-guide_dev.md'
-          - "Website Guide": 'developers/committer-guide/website-guide_dev.md'
-          - "Apache Dubbo Page Maintenance": 'developers/committer-guide/apache-dubbo-page_dev.md'
-          - "Release Guide": 'developers/committer-guide/release-guide_dev.md'
+      - "Contributor Guide":
+          - "新贡献者向导": 'developers/contributor-guide/new-contributor-guide_dev.md'
+          - "软件捐献向导": 'developers/contributor-guide/software-donation-guide_dev.md'
+          - "测试覆盖率向导": 'developers/contributor-guide/test-coverage-guide_dev.md'
+          - "邮件列表订阅向导": 'developers/contributor-guide/mailing-list-subscription-guide_dev.md'
+          - "CLA签署向导": 'developers/contributor-guide/cla-signing-guide_dev.md'
+          - "Dubbo Extension向导": 'developers/contributor-guide/dubbo-extension-guide_dev.md'
+          - "如何成为Dubbo committer": 'developers/contributor-guide/become-a-committer_dev.md'
+          - "报告安全问题": 'developers/contributor-guide/reporting-security-issues_dev.md'
+      - "Committer Guide":
+          - "Apache 提交者注册流程": 'developers/committer-guide/new-committer-guide_dev.md'
+          - "给问题打标签": 'developers/committer-guide/label-an-issue-guide_dev.md'
+          - "网站向导": 'developers/committer-guide/website-guide_dev.md'
+          - "Dubbo主页的维护": 'developers/committer-guide/apache-dubbo-page_dev.md'
+          - "版本发布向导": 'developers/committer-guide/release-guide_dev.md'
   - "下载":
       - "版本列表": "blog/download.md"
 # Configuration
