try remove sub menu

--- a/mkdocs_en.yml
+++ b/mkdocs_en.yml
@@ -179,8 +179,7 @@ nav:
   - "Developers":
       - "How to contribute": 'developers/guide_dev.md'
       - "Developers": 'developers/developers_dev.md'
-      - "User Guide":
-          - "faq": 'developers/user-guide/faq_dev.md'
+      - "User Guide": 'developers/user-guide/faq_dev.md'
       - "Contributor Guide":
           - "New contributor guide": 'developers/contributor-guide/new-contributor-guide_dev.md'
           - "Software donation guide": 'developers/contributor-guide/software-donation-guide_dev.md'
