--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -245,8 +245,7 @@ nav:
   - "开发者指引":
       - "如何做出贡献": 'developers/guide_dev.md'
       - "开发者": 'developers/developers_dev.md'
-      - "User Guide":
-          - "faq": 'developers/user-guide/faq_dev.md'
+      - "User Guide": 'developers/user-guide/faq_dev.md'
       - "Contributor Guide":
           - "新贡献者向导": 'developers/contributor-guide/new-contributor-guide_dev.md'
           - "软件捐献向导": 'developers/contributor-guide/software-donation-guide_dev.md'
