--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install jq
-        run: apt-get install jq -y
+        run: sudo apt-get install jq -y
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
