switch default languange to zh

--- a/config.toml
+++ b/config.toml
@@ -7,9 +7,9 @@ enableGitInfo = true
 enableRobotsTXT = true
 
 # Language settings
-contentDir = "content/en"
-defaultContentLanguage = "en"
-defaultContentLanguageInSubdir = false
+contentDir = "content/zh"
+defaultContentLanguage = "zh"
+defaultContentLanguageInSubdir = true
 # Useful when translating.
 enableMissingTranslationPlaceholders = true
 
@@ -58,6 +58,7 @@ defaultContentLanguageInSubdir = false
 title = "Apache Dubbo"
 description = "Apache Dubbo Official Website"
 languageName = "English"
+contentDir = "content/en"
 # Weight used for sorting.
 weight = 1
 
