add .htaccess file

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -34,6 +34,8 @@ jobs:
         env:
           HUGO_ENV: production
         run: hugo --minify
+      - name: Copy other files
+        run: cp .htaccess ./public
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/master'
