--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://dubbo.apache.org/"
+baseURL = "https://dubbo.apache.org/"
 languageCode = "en-us"
 title = "Apache Dubbo"
 theme = ["docsy"]
