--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,5 @@ RewriteEngine On
 RewriteCond %{SERVER_PORT} !^443$
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 </IfModule>
+
+ErrorDocument 404 /404.html
