--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -3,7 +3,7 @@ name: Website Deploy
 on:
   push:
     branches:
-      - master
+      - try-version-docing
   pull_request:
     types: [ opened, synchronize, reopened, closed ]
     branches:
