--- a/config.toml
+++ b/config.toml
@@ -100,11 +100,11 @@ offlineSearch = false
 # Add your release versions here
 [[params.versions]]
   version = "v3.0"
-  url = "https://dubbo.apache.org/zh/docs_3.0/"
+  url = "https://dubbo.apache.org/zh/docs/"
 
 [[params.versions]]
   version = "v2.7"
-  url = "https://dubbo.apache.org/zh/docs_2.7/"
+  url = "https://dubbo.apache.org/zh/docsv2.7/"
 
 # Menu title if your navbar has a versions selector to access old versions of your site.
 # This menu appears only if you have at least one [params.versions] set.
@@ -122,7 +122,7 @@ archived_version = false
 
 # A link to latest version of the docs. Used in the "version-banner" partial to
 # point people to the main doc site.
-url_latest_version = "/docs/v2.7"
+url_latest_version = "/docs"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
 github_repo = "https://github.com/apache/dubbo-website"
