--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -38,7 +38,7 @@ jobs:
         run: cp .htaccess ./public
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/try-version-docing'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: asf-site
